--- a/index.html
+++ b/index.html
@@ -3,38 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>رادار الذهب السعودي</title>
+    <title>مؤشر الذهب السعودي</title>
     <style>
-        body { background-color: #0b0e11; color: white; font-family: sans-serif; margin: 0; padding: 0; }
-        .container { padding: 10px; max-width: 1000px; margin: auto; }
-        .header { background: #161a1e; padding: 15px; text-align: center; border-bottom: 2px solid #f0b90b; }
-        h1 { color: #f0b90b; font-size: 1.5rem; margin: 0; }
-        .card { background: #1e222d; border-radius: 8px; margin-top: 15px; overflow: hidden; border: 1px solid #363c4e; }
-        .label { padding: 10px; background: #2a2e39; font-weight: bold; font-size: 14px; }
+        body { font-family: 'Cairo', sans-serif; background-color: #0e1217; color: #ffffff; margin: 0; padding: 10px; }
+        .container { max-width: 1100px; margin: auto; }
+        .header { text-align: center; padding: 20px; color: #ffca28; }
+        .card { background: #1c2128; border-radius: 12px; padding: 15px; margin-bottom: 20px; border: 1px solid #30363d; }
+        h3 { margin-top: 0; font-size: 18px; color: #adb5bd; }
+        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
+        @media (max-width: 768px) { .grid { grid-template-columns: 1fr; } }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="header">
-    <h1>🇸🇦 رادار الذهب - تحديث مباشر</h1>
-</div>
-
 <div class="container">
-    <div class="card">
-        <div class="label">أسعار الذهب المباشرة (ريال/دولار)</div>
-        <iframe src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=ar&theme=dark&symbols=FX_IDC%3AXAUSAR%2COANDA%3AXAUUSD" width="100%" height="72" frameborder="0"></iframe>
+    <div class="header">
+        <h1>🇸🇦 رادار الذهب - السعودية</h1>
+        <p>مباشر من Investing & TradingView</p>
     </div>
 
-    <div class="card">
-        <div class="label">📈 مخطط حركة الذهب (تحديث لحظي)</div>
-        <iframe src="https://s.tradingview.com/widgetembed/?symbol=OANDA:XAUUSD&interval=D&theme=dark&style=1&locale=ar" width="100%" height="450" frameborder="0"></iframe>
+    <div class="card" style="height: 60px; padding: 5px;">
+        <iframe src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=ar#%7B%22symbols%22%3A%5B%7B%22proName%22%3A%22FX_IDC%3AXAUSAR%22%2C%22title%22%3A%22%D8%A7%D9%84%D8%B0%D9%87%D8%A8%2F%D8%B1%D9%8A%D8%A7%D9%84%22%7D%2C%7B%22proName%22%3A%22OANDA%3AXAUUSD%22%2C%22title%22%3A%22%D8%A7%D9%84%D8%B0%D9%87%D8%A8%2F%D8%AF%D9%88%D9%84%D8%A7%D8%B1%22%7D%5D%2C%22colorTheme%22%3A%22dark%22%7D" width="100%" height="100%" frameborder="0"></iframe>
     </div>
 
-    <div class="card">
-        <div class="label">⚖️ تحليل Investing (إشارة البيع والشراء)</div>
-        <iframe src="https://s.tradingview.com/embed-widget/technical-analysis/?locale=ar&theme=dark&symbol=OANDA%3AXAUUSD&interval=1h" width="100%" height="400" frameborder="0"></iframe>
+    <div class="grid">
+        <div class="card">
+            <h3>📈 حركة الذهب (ريال سعودي)</h3>
+            <div id="chart_div" style="height: 400px;"></div>
+        </div>
+
+        <div class="card">
+            <h3>⚖️ تحليل القرار (Investing)</h3>
+            <div class="tradingview-widget-container">
+                <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
+                {
+                    "interval": "1h",
+                    "width": "100%",
+                    "isTransparent": true,
+                    "height": "400",
+                    "symbol": "OANDA:XAUUSD",
+                    "showIntervalTabs": true,
+                    "locale": "ar",
+                    "colorTheme": "dark"
+                }
+                </script>
+                <p style="font-size: 12px; text-align: center; color: #666;">*التحليل مبني على السعر العالمي للذهب</p>
+            </div>
+        </div>
     </div>
 </div>
+
+<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+<script type="text/javascript">
+  new TradingView.widget({
+    "width": "100%",
+    "height": 400,
+    "symbol": "FX_IDC:XAUSAR",
+    "interval": "D",
+    "timezone": "Asia/Riyadh",
+    "theme": "dark",
+    "style": "1",
+    "locale": "ar",
+    "toolbar_bg": "#f1f3f6",
+    "enable_publishing": false,
+    "container_id": "chart_div"
+  });
+</script>
 
 </body>
 </html>
