--- a/index.html
+++ b/index.html
@@ -3,53 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مؤشر الذهب السعودي</title>
+    <title>رادار الذهب الاحترافي 2026</title>
     <style>
-        body { font-family: 'Cairo', sans-serif; background-color: #0e1217; color: #ffffff; margin: 0; padding: 10px; }
-        .container { max-width: 1100px; margin: auto; }
-        .header { text-align: center; padding: 20px; color: #ffca28; }
-        .card { background: #1c2128; border-radius: 12px; padding: 15px; margin-bottom: 20px; border: 1px solid #30363d; }
-        h3 { margin-top: 0; font-size: 18px; color: #adb5bd; }
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #0e1627; color: white; margin: 0; padding: 20px; }
+        .container { max-width: 1200px; margin: auto; }
+        h1 { text-align: center; color: #ffd700; }
+        .grid { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; }
+        .card { background: #1e222d; padding: 15px; border-radius: 10px; border: 1px solid #363c4e; }
         @media (max-width: 768px) { .grid { grid-template-columns: 1fr; } }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <div class="container">
-    <div class="header">
-        <h1>🇸🇦 رادار الذهب - السعودية</h1>
-        <p>مباشر من Investing & TradingView</p>
-    </div>
-
-    <div class="card" style="height: 60px; padding: 5px;">
-        <iframe src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=ar#%7B%22symbols%22%3A%5B%7B%22proName%22%3A%22FX_IDC%3AXAUSAR%22%2C%22title%22%3A%22%D8%A7%D9%84%D8%B0%D9%87%D8%A8%2F%D8%B1%D9%8A%D8%A7%D9%84%22%7D%2C%7B%22proName%22%3A%22OANDA%3AXAUUSD%22%2C%22title%22%3A%22%D8%A7%D9%84%D8%B0%D9%87%D8%A8%2F%D8%AF%D9%88%D9%84%D8%A7%D8%B1%22%7D%5D%2C%22colorTheme%22%3A%22dark%22%7D" width="100%" height="100%" frameborder="0"></iframe>
-    </div>
-
+    <h1>🏆 لوحة تحليل الذهب المباشرة</h1>
+    
     <div class="grid">
         <div class="card">
-            <h3>📈 حركة الذهب (ريال سعودي)</h3>
-            <div id="chart_div" style="height: 400px;"></div>
+            <h3>الرسم البياني اللحظي (XAU/USD)</h3>
+            <div id="tradingview_chart" style="height: 500px;"></div>
         </div>
 
         <div class="card">
-            <h3>⚖️ تحليل القرار (Investing)</h3>
+            <h3>مؤشر القرار التلقائي</h3>
             <div class="tradingview-widget-container">
+                <div class="tradingview-widget-container__widget"></div>
                 <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
                 {
                     "interval": "1h",
                     "width": "100%",
                     "isTransparent": true,
-                    "height": "400",
+                    "height": "450",
                     "symbol": "OANDA:XAUUSD",
                     "showIntervalTabs": true,
-                    "locale": "ar",
-                    "colorTheme": "dark"
+                    "locale": "ar"
                 }
                 </script>
-                <p style="font-size: 12px; text-align: center; color: #666;">*التحليل مبني على السعر العالمي للذهب</p>
             </div>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top: 20px;">
+        <h3>آخر أخبار الذهب العالمية</h3>
+        <div class="tradingview-widget-container">
+            <div class="tradingview-widget-container__widget"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
+            {
+                "feedMode": "symbol",
+                "symbol": "OANDA:XAUUSD",
+                "colorTheme": "dark",
+                "isTransparent": true,
+                "displayMode": "regular",
+                "width": "100%",
+                "height": "400",
+                "locale": "ar"
+            }
+            </script>
         </div>
     </div>
 </div>
@@ -57,18 +66,19 @@
 <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
 <script type="text/javascript">
   new TradingView.widget({
-    "width": "100%",
-    "height": 400,
-    "symbol": "FX_IDC:XAUSAR",
-    "interval": "D",
-    "timezone": "Asia/Riyadh",
-    "theme": "dark",
-    "style": "1",
-    "locale": "ar",
-    "toolbar_bg": "#f1f3f6",
-    "enable_publishing": false,
-    "container_id": "chart_div"
-  });
+  "width": "100%",
+  "height": 500,
+  "symbol": "OANDA:XAUUSD",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "dark",
+  "style": "1",
+  "locale": "ar",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "container_id": "tradingview_chart"
+});
 </script>
 
 </body>
