--- a/index.html
+++ b/index.html
@@ -2,49 +2,89 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>تطبيق رادار الذهب</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>محلل الذهب - السوق السعودي</title>
     <style>
-        body { background-color: #0b0e11; color: white; font-family: 'Arial', sans-serif; margin: 0; padding: 0; }
-        .header { background: #161a1e; padding: 15px; text-align: center; border-bottom: 2px solid #f0b90b; }
-        .header h1 { color: #f0b90b; margin: 0; font-size: 1.2rem; }
-        .container { padding: 10px; }
-        .widget-card { background: #1e222d; border-radius: 12px; margin-bottom: 15px; overflow: hidden; border: 1px solid #363c4e; height: auto; }
-        .label { padding: 8px 15px; background: #2a2e39; font-size: 13px; color: #ffd700; border-bottom: 1px solid #363c4e; }
-        
-        /* ضبط أحجام الويدجت لتعمل على الجوال */
-        .price-strip { height: 72px; }
-        .main-chart { height: 400px; }
-        .tech-analysis { height: 450px; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #0b0e11; color: white; margin: 0; padding: 20px; }
+        .container { max-width: 1200px; margin: auto; }
+        h1 { text-align: center; color: #f0b90b; margin-bottom: 30px; }
+        .grid { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; }
+        .card { background: #161a1e; padding: 15px; border-radius: 12px; border: 1px solid #2b3139; }
+        .header-info { text-align: center; margin-bottom: 20px; color: #848e9c; }
+        @media (max-width: 900px) { .grid { grid-template-columns: 1fr; } }
     </style>
 </head>
 <body>
 
-<div class="header">
-    <h1>🏆 رادار الذهب (مباشر)</h1>
-</div>
-
 <div class="container">
+    <h1>🇸🇦 رادار الذهب - مباشر حسب سوق السعودية</h1>
+    <p class="header-info">تحليل مباشر لأسعار الذهب بالريال السعودي (XAU/SAR)</p>
+    
+    <div class="grid">
+        <div class="card">
+            <h3>📈 مخطط الذهب بالريال السعودي (مباشر)</h3>
+            <div id="saudi_gold_chart" style="height: 500px;"></div>
+        </div>
 
-    <div class="widget-card price-strip">
-        <iframe src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=ar&theme=dark&symbols=FX_IDC%3AXAUSAR%7C1D%2COANDA%3AXAUUSD%7C1D" width="100%" height="72" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
-    </div>
-
-    <div class="widget-card">
-        <div class="label">📈 مخطط الذهب لحظة بلحظة</div>
-        <div class="main-chart">
-            <iframe src="https://s.tradingview.com/widgetembed/?symbol=OANDA:XAUUSD&interval=1&theme=dark&style=1&locale=ar&timezone=Asia/Riyadh" width="100%" height="400" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+        <div class="card">
+            <h3>⚖️ قرار التداول (حسب Investing)</h3>
+            <div class="tradingview-widget-container">
+                <div class="tradingview-widget-container__widget"></div>
+                <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
+                {
+                    "interval": "1h",
+                    "width": "100%",
+                    "isTransparent": true,
+                    "height": "450",
+                    "symbol": "FX_IDC:XAUSAR",
+                    "showIntervalTabs": true,
+                    "locale": "ar",
+                    "colorTheme": "dark"
+                }
+                </script>
+            </div>
         </div>
     </div>
 
-    <div class="widget-card">
-        <div class="label">⚖️ إشارة البيع والشراء (Investing)</div>
-        <div class="tech-analysis">
-            <iframe src="https://s.tradingview.com/embed-widget/technical-analysis/?locale=ar&theme=dark&symbol=OANDA%3AXAUUSD&interval=1m&width=100%25&height=450" width="100%" height="450" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+    <div class="card" style="margin-top: 20px;">
+        <h3>📰 آخر أخبار الذهب والاقتصاد السعودي</h3>
+        <div class="tradingview-widget-container">
+            <div class="tradingview-widget-container__widget"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
+            {
+                "feedMode": "market",
+                "market": "crypto", 
+                "symbol": "FX_IDC:XAUSAR",
+                "colorTheme": "dark",
+                "isTransparent": true,
+                "displayMode": "regular",
+                "width": "100%",
+                "height": "450",
+                "locale": "ar"
+            }
+            </script>
         </div>
     </div>
-
 </div>
+
+<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+<script type="text/javascript">
+  new TradingView.widget({
+  "width": "100%",
+  "height": 500,
+  "symbol": "FX_IDC:XAUSAR",
+  "interval": "D",
+  "timezone": "Asia/Riyadh",
+  "theme": "dark",
+  "style": "1",
+  "locale": "ar",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "hide_side_toolbar": false,
+  "allow_symbol_change": true,
+  "container_id": "saudi_gold_chart"
+});
+</script>
 
 </body>
 </html>
