--- a/index.html
+++ b/index.html
@@ -2,89 +2,42 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>محلل الذهب - السوق السعودي</title>
+    <title>رادار الذهب الخاص بي</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #0b0e11; color: white; margin: 0; padding: 20px; }
-        .container { max-width: 1200px; margin: auto; }
-        h1 { text-align: center; color: #f0b90b; margin-bottom: 30px; }
-        .grid { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; }
-        .card { background: #161a1e; padding: 15px; border-radius: 12px; border: 1px solid #2b3139; }
-        .header-info { text-align: center; margin-bottom: 20px; color: #848e9c; }
-        @media (max-width: 900px) { .grid { grid-template-columns: 1fr; } }
+        body { background-color: #0e1627; color: white; font-family: sans-serif; text-align: center; }
+        .container { max-width: 1100px; margin: auto; padding: 20px; }
+        .card { background: #1e222d; border-radius: 10px; padding: 20px; margin-bottom: 20px; border: 1px solid #363c4e; }
     </style>
 </head>
 <body>
-
-<div class="container">
-    <h1>🇸🇦 رادار الذهب - مباشر حسب سوق السعودية</h1>
-    <p class="header-info">تحليل مباشر لأسعار الذهب بالريال السعودي (XAU/SAR)</p>
-    
-    <div class="grid">
+    <div class="container">
+        <h1>🏆 محلل الذهب الذكي - 2026</h1>
+        
         <div class="card">
-            <h3>📈 مخطط الذهب بالريال السعودي (مباشر)</h3>
-            <div id="saudi_gold_chart" style="height: 500px;"></div>
-        </div>
-
-        <div class="card">
-            <h3>⚖️ قرار التداول (حسب Investing)</h3>
+            <h3>الإشارة الحالية (بيع/شراء)</h3>
             <div class="tradingview-widget-container">
-                <div class="tradingview-widget-container__widget"></div>
                 <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
                 {
                     "interval": "1h",
                     "width": "100%",
                     "isTransparent": true,
-                    "height": "450",
-                    "symbol": "FX_IDC:XAUSAR",
+                    "height": "400",
+                    "symbol": "OANDA:XAUUSD",
                     "showIntervalTabs": true,
-                    "locale": "ar",
-                    "colorTheme": "dark"
+                    "locale": "ar"
                 }
                 </script>
             </div>
         </div>
-    </div>
 
-    <div class="card" style="margin-top: 20px;">
-        <h3>📰 آخر أخبار الذهب والاقتصاد السعودي</h3>
-        <div class="tradingview-widget-container">
-            <div class="tradingview-widget-container__widget"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
-            {
-                "feedMode": "market",
-                "market": "crypto", 
-                "symbol": "FX_IDC:XAUSAR",
-                "colorTheme": "dark",
-                "isTransparent": true,
-                "displayMode": "regular",
-                "width": "100%",
-                "height": "450",
-                "locale": "ar"
-            }
+        <div class="card">
+            <h3>حركة السعر المباشرة</h3>
+            <div id="gold_chart"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+            <script type="text/javascript">
+                new TradingView.widget({ "width": "100%", "height": 500, "symbol": "OANDA:XAUUSD", "interval": "D", "theme": "dark", "container_id": "gold_chart" });
             </script>
         </div>
     </div>
-</div>
-
-<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-<script type="text/javascript">
-  new TradingView.widget({
-  "width": "100%",
-  "height": 500,
-  "symbol": "FX_IDC:XAUSAR",
-  "interval": "D",
-  "timezone": "Asia/Riyadh",
-  "theme": "dark",
-  "style": "1",
-  "locale": "ar",
-  "toolbar_bg": "#f1f3f6",
-  "enable_publishing": false,
-  "hide_side_toolbar": false,
-  "allow_symbol_change": true,
-  "container_id": "saudi_gold_chart"
-});
-</script>
-
 </body>
 </html>
