--- a/index.html
+++ b/index.html
@@ -3,73 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مؤشر الذهب السعودي</title>
+    <title>محلل الذهب المباشر</title>
     <style>
-        body { font-family: 'Cairo', sans-serif; background-color: #0e1217; color: #ffffff; margin: 0; padding: 10px; }
-        .container { max-width: 1100px; margin: auto; }
-        .header { text-align: center; padding: 20px; color: #ffca28; }
-        .card { background: #1c2128; border-radius: 12px; padding: 15px; margin-bottom: 20px; border: 1px solid #30363d; }
-        h3 { margin-top: 0; font-size: 18px; color: #adb5bd; }
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
-        @media (max-width: 768px) { .grid { grid-template-columns: 1fr; } }
+        body { background-color: #131722; color: #ffffff; font-family: sans-serif; margin: 0; padding: 10px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        .header h1 { color: #ffd700; margin: 0; }
+        .card { background: #1e222d; border-radius: 10px; padding: 10px; margin-bottom: 15px; border: 1px solid #363c4e; box-shadow: 0 2px 10px rgba(0,0,0,0.2); }
+        .chart-container { position: relative; width: 100%; height: 0; padding-bottom: 56.25%; } /* نسبة عرض إلى ارتفاع 16:9 */
+        .chart-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
+        .analysis-container { position: relative; width: 100%; height: 450px; }
+        .analysis-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="container">
-    <div class="header">
-        <h1>🇸🇦 رادار الذهب - السعودية</h1>
-        <p>مباشر من Investing & TradingView</p>
-    </div>
+<div class="header">
+    <h1>🏆 لوحة تحليل الذهب الاحترافية</h1>
+    <p>تحديث مباشر - بيانات موثوقة</p>
+</div>
 
-    <div class="card" style="height: 60px; padding: 5px;">
-        <iframe src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=ar#%7B%22symbols%22%3A%5B%7B%22proName%22%3A%22FX_IDC%3AXAUSAR%22%2C%22title%22%3A%22%D8%A7%D9%84%D8%B0%D9%87%D8%A8%2F%D8%B1%D9%8A%D8%A7%D9%84%22%7D%2C%7B%22proName%22%3A%22OANDA%3AXAUUSD%22%2C%22title%22%3A%22%D8%A7%D9%84%D8%B0%D9%87%D8%A8%2F%D8%AF%D9%88%D9%84%D8%A7%D8%B1%22%7D%5D%2C%22colorTheme%22%3A%22dark%22%7D" width="100%" height="100%" frameborder="0"></iframe>
-    </div>
-
-    <div class="grid">
-        <div class="card">
-            <h3>📈 حركة الذهب (ريال سعودي)</h3>
-            <div id="chart_div" style="height: 400px;"></div>
-        </div>
-
-        <div class="card">
-            <h3>⚖️ تحليل القرار (Investing)</h3>
-            <div class="tradingview-widget-container">
-                <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
-                {
-                    "interval": "1h",
-                    "width": "100%",
-                    "isTransparent": true,
-                    "height": "400",
-                    "symbol": "OANDA:XAUUSD",
-                    "showIntervalTabs": true,
-                    "locale": "ar",
-                    "colorTheme": "dark"
-                }
-                </script>
-                <p style="font-size: 12px; text-align: center; color: #666;">*التحليل مبني على السعر العالمي للذهب</p>
-            </div>
-        </div>
+<div class="card">
+    <div class="chart-container">
+        <iframe src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_7a4e0&symbol=FX_IDC%3AXAUSAR&interval=D&hidesidetoolbar=0&symboledit=1&saveimage=1&toolbarbg=f1f3f6&studies=%5B%5D&theme=dark&style=1&timezone=Asia%2FRiyadh&withdateranges=1&studies_overrides=%7B%7D&overrides=%7B%7D&enabled_features=%5B%5D&disabled_features=%5B%5D&locale=ar&utm_source=www.tradingview.com&utm_medium=widget_new&utm_campaign=chart&utm_term=FX_IDC%3AXAUSAR"></iframe>
     </div>
 </div>
 
-<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-<script type="text/javascript">
-  new TradingView.widget({
-    "width": "100%",
-    "height": 400,
-    "symbol": "FX_IDC:XAUSAR",
-    "interval": "D",
-    "timezone": "Asia/Riyadh",
-    "theme": "dark",
-    "style": "1",
-    "locale": "ar",
-    "toolbar_bg": "#f1f3f6",
-    "enable_publishing": false,
-    "container_id": "chart_div"
-  });
-</script>
+<div class="card">
+    <h3 style="text-align:center; color:#ccc;">🧭 مؤشر القرار الفني</h3>
+    <div class="analysis-container">
+        <iframe src="https://s.tradingview.com/embed-widget/technical-analysis/?locale=ar#%7B%22interval%22%3A%221h%22%2C%22width%22%3A%22100%25%22%2C%22isTransparent%22%3Atrue%2C%22height%22%3A%22450%22%2C%22symbol%22%3A%22FX_IDC%3AXAUSAR%22%2C%22showIntervalTabs%22%3Atrue%2C%22colorTheme%22%3A%22dark%22%7D"></iframe>
+    </div>
+</div>
 
 </body>
 </html>
