Correct widget-container div structure in index.html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
     </div>
 
     <div class="section-label">● مخطط الحركة اللحظية</div>
-    <div class="widget-container
-        
+    <div class="widget-container">
+        <iframe src="https://s.tradingview.com/widgetembed/?symbol=OANDA:XAUUSD&interval=1&theme=dark&style=1&locale=ar" width="100%" height="400" frameborder="0"></iframe>
+    </div>
+
     <div class="section-label">● تحليل الإشارة (بيع / شراء)</div>
     <div class="widget-container">
         <iframe src="https://s.tradingview.com/embed-widget/technical-analysis/?locale=ar&theme=dark&symbol=OANDA%3AXAUUSD&interval=1m" width="100%" height="400" frameborder="0"></iframe>
