--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>إهداء خاص: رادار الذهب لكِ يا ركروكة
+    <title>إهداء خاص: رادار الذهب لكِ يا ركروكة!</title>
     <style>
         body { 
             background-color: #0d1117; 
