Update title and styles in index.html

--- a/index.html
+++ b/index.html
@@ -3,131 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>إهداء خاص: رادار الذهب لكِ يا ركروكة!</title>
+    <title>رادار الذهب - إهداء لـ ركروكة</title>
     <style>
         body { 
             background-color: #0d1117; 
             color: #e6edf3; 
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-            margin: 0; 
-            padding: 0;
-            overflow-x: hidden; /* لمنع ظهور شريط التمرير الأفقي بسبب الرسوم المتحركة */
-            position: relative; /* للسماح بتموضع القلوب المتحركة */
+            font-family: 'Arial', sans-serif;
+            margin: 0; padding: 0;
+            overflow-x: hidden;
+            position: relative;
         }
         .app-bar { 
             background-color: #161b22; 
-            padding: 20px; 
+            padding: 15px; 
             text-align: center; 
             border-bottom: 2px solid #d29922;
         }
-        h1 { font-size: 1.2rem; color: #d29922; margin: 0; }
-        .romantic-message {
+        .romantic-box {
             text-align: center;
-            padding: 15px;
-            background: linear-gradient(45deg, #ff6b6b, #ffe66d); /* تدرج لوني دافئ */
+            padding: 25px;
+            background: linear-gradient(45deg, #ff4b2b, #ff416c);
             color: white;
-            font-size: 1.1rem;
+            font-size: 1.3rem;
             font-weight: bold;
-            border-radius: 8px;
-            margin: 10px;
-            box-shadow: 0 4px 15px rgba(255, 107, 107, 0.4);
-            animation: pulse 1.5s infinite alternate; /* تأثير نبض خفيف */
+            margin: 15px;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(255, 75, 43, 0.4);
+            animation: pulse 2s infinite;
         }
         @keyframes pulse {
-            from { transform: scale(1); }
-            to { transform: scale(1.02); }
+            0% { transform: scale(1); }
+            50% { transform: scale(1.03); }
+            100% { transform: scale(1); }
         }
-        .heart-emoji {
-            font-size: 2.5rem;
-            animation: bounce 1s infinite alternate; /* تأثير ارتداد للقلوب */
-            display: inline-block;
-            margin: 0 5px;
-        }
-        @keyframes bounce {
-            from { transform: translateY(0); }
-            to { transform: translateY(-5px); }
-        }
-
-        .section-label { 
-            padding: 10px 15px; 
-            font-size: 0.9rem; 
-            color: #8b949e; 
-            background: #161b22;
-        }
-        .widget-container { 
+        .section-label { padding: 10px 15px; color: #8b949e; font-size: 0.9rem; font-weight: bold; }
+        .widget-card { 
             margin: 10px; 
             border-radius: 12px; 
             overflow: hidden; 
             border: 1px solid #30363d;
-            background: #0d1117;
+            background: #161b22;
         }
-        iframe { border: none; display: block; }
-
+        iframe { border: none; display: block; width: 100%; }
+        
         /* تأثير القلوب المتساقطة */
         .falling-heart {
             position: absolute;
-            color: #ff6b6b; /* لون القلب */
-            font-size: 20px;
-            pointer-events: none; /* لتجاهل النقر على القلوب */
+            top: -30px;
+            color: #ff4b2b;
+            font-size: 24px;
+            pointer-events: none;
             animation: fall linear forwards;
-            opacity: 0;
-            z-index: 9999; /* ليكون فوق كل شيء */
+            z-index: 9999;
         }
         @keyframes fall {
-            0% { transform: translateY(-10vh) scale(0.5); opacity: 0.8; }
-            100% { transform: translateY(100vh) scale(1.2); opacity: 0; }
+            to { transform: translateY(110vh) rotate(360deg); opacity: 0; }
         }
     </style>
 </head>
 <body>
 
     <div class="app-bar">
-        <h1>🏆 رادار الذهب: السعودية والعالم</h1>
+        <h1>🏆 رادار الذهب المباشر</h1>
     </div>
 
-    <div class="romantic-message">
-        أحبكِ يا كروكة! 
-        <span class="heart-emoji">❤️</span> 
-        <span class="heart-emoji">💖</span>
-        <br> كل لحظة وكل نبضة قلب.
+    <div class="romantic-box">
+        ❤️ أحبكِ يا ركروكة ❤️
+        <br>
+        <span style="font-size: 0.9rem; font-weight: normal; opacity: 0.9;">أنتِ الذهب الذي لا يصدأ أبداً</span>
     </div>
 
-    <div class="section-label">● بث حي للأسعار (ريال/دولار)</div>
-    <div class="widget-container">
-        <iframe src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=ar&theme=dark&symbols=FX_IDC%3AXAUSAR%2COANDA%3AXAUUSD" width="100%" height="72" frameborder="0"></iframe>
+    <div class="section-label">● أسعار الذهب اللحظية (ريال سعودي / دولار)</div>
+    <div class="widget-card">
+        <iframe src="https://s.tradingview.com/embed-widget/ticker-tape/?locale=ar&theme=dark&symbols=FX_IDC%3AXAUSAR%2COANDA%3AXAUUSD" height="72"></iframe>
     </div>
 
-    <div class="section-label">● مخطط الحركة اللحظية</div>
-    <div class="widget-container">
-        <iframe src="https://s.tradingview.com/widgetembed/?symbol=OANDA:XAUUSD&interval=1&theme=dark&style=1&locale=ar" width="100%" height="400" frameborder="0"></iframe>
+    <div class="section-label">● حركة السوق (تحديث كل ثانية)</div>
+    <div class="widget-card">
+        <iframe src="https://s.tradingview.com/widgetembed/?symbol=OANDA:XAUUSD&interval=1&theme=dark&style=1&locale=ar" height="400"></iframe>
     </div>
 
-    <div class="section-label">● تحليل الإشارة (بيع / شراء)</div>
-    <div class="widget-container">
-        <iframe src="https://s.tradingview.com/embed-widget/technical-analysis/?locale=ar&theme=dark&symbol=OANDA%3AXAUUSD&interval=1m" width="100%" height="400" frameborder="0"></iframe>
+    <div class="section-label">● قرار البيع والشراء (تحليل دقيق)</div>
+    <div class="widget-card">
+        <iframe src="https://s.tradingview.com/embed-widget/technical-analysis/?locale=ar&theme=dark&symbol=OANDA%3AXAUUSD&interval=1m" height="420"></iframe>
     </div>
 
     <script>
-        // كود JavaScript لإضافة قلوب متساقطة عشوائياً
-        function createFallingHeart() {
-            const heart = document.createElement('span');
+        // وظيفة صنع القلوب المتساقطة
+        function createHeart() {
+            const heart = document.createElement('div');
             heart.classList.add('falling-heart');
-            heart.innerHTML = '💖'; // رمز القلب
-
-            heart.style.left = Math.random() * 100 + 'vw'; // موقع عشوائي أفقي
-            heart.style.animationDuration = (Math.random() * 3 + 5) + 's'; // سرعة سقوط عشوائية
-            heart.style.animationDelay = (Math.random() * 2) + 's'; // تأخير عشوائي
-
+            heart.innerHTML = '❤️';
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.animationDuration = Math.random() * 3 + 3 + 's';
             document.body.appendChild(heart);
-
-            // إزالة القلب بعد انتهاء الرسوم المتحركة
-            heart.addEventListener('animationend', () => {
-                heart.remove();
-            });
+            setTimeout(() => heart.remove(), 6000);
         }
-
-        // إنشاء قلوب جديدة كل فترة
-        setInterval(createFallingHeart, 800); // قلب كل 0.8 ثانية
+        setInterval(createHeart, 600);
     </script>
 
 </body>
